uda bisa tekan2
jangan pernah push

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,14 +24,18 @@
         <ion-img width="80" height="40" src="assets/img/3.jpg"></ion-img>
       </ion-slide>
     </ion-slides>
+    <ion-card-content>
+      <h2><b>Daftar Komik</b></h2>
+  
+    </ion-card-content>
     <ion-list>
       <ion-item (click)="golistchapter()">
         <ion-avatar slot="start">
-          <ion-img src="assets/img/logo.jpg"></ion-img>
+          <ion-img src="assets/es/iPoel Emperor Sword 01 - 001.jpg"></ion-img>
         </ion-avatar>
         <ion-label>
-          <h2>Hentai</h2>
-          <h3>Chapter 5</h3>
+          <h2>Sword Emperor</h2>
+          <h3>Chapter 1</h3>
           <p>netnot netnot ya netnot</p>
         </ion-label>
       </ion-item>
