--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-img src="/assets/4.png"></ion-img>
+    <ion-img src="/assets/img/4.png"></ion-img>
     <ion-item>
         <ion-input required type="text" placeholder="UserName"></ion-input>
       </ion-item>
