--- a/src/app/list-chapter/list-chapter.page.html
+++ b/src/app/list-chapter/list-chapter.page.html
@@ -10,23 +10,18 @@
 </ion-header>
 
 <ion-content padding>
-
-  <ion-card class="cardcont" >
+  <ion-card >
       <ion-card-header>
-          <ion-card-title class="judulkomik">Sword Emperor</ion-card-title>
+          <ion-card-title>Sword Emperor</ion-card-title>
       </ion-card-header>
     
-      <ion-card-content >
-        <ion-col>
-              <ion-img class="avatar"  src="assets/es/iPoel Emperor Sword 01 - 001.jpg"></ion-img> 
-            <div class="deskripsi">
-              <B>Anggap saja deskripsi</B>
-            </div>
-            </ion-col>   
+      <ion-card-content>
+          <ion-avatar slot="start">
+              <ion-img width="20%" height="20%" src="assets/es/iPoel Emperor Sword 01 - 001.jpg"></ion-img>
+          </ion-avatar>
       </ion-card-content>
     
     </ion-card>
-  
       <ion-list (click)="gochapter()">
           <ion-item >
             <ion-avatar  slot="start">
@@ -38,7 +33,6 @@
             </ion-label>
           </ion-item>
         </ion-list>
-        
   
 
 </ion-content>
